[project]
name = "flockwave-ext"
version = "1.27.0"
description = "Generic extension manager for Skybrush-related projects"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "blinker (>=1.9.0)",
  "trio >= 0.30.0",
  "importlib-metadata (>=8.7.0)",
  "semver (>=3.0.4)",
]

[project.optional-dependencies]
dev = ["pytest (>=8.4.1)", "coverage[toml] (>=7.9.1)", "pytest-cov (>=6.2.1)"]

[tool.poetry]
packages = [{ include = "flockwave", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
