[project]
name = "flockwave-ext"
version = "2.0.0"
description = "Generic extension manager for Skybrush-related projects"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "blinker>=1.9.0",
  "trio>=0.30.0",
  "semver>=3.0.4",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "coverage[toml]>=7.9.1",
  "pytest-cov>=6.2.1"
]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "I", "W"]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
