[project]
name = "flockwave-ext"
version = "2.1.1"
description = "Generic extension manager for Skybrush-related projects"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "blinker>=1.9.0",
  "trio>=0.30.0",
  "semver>=3.0.4",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "coverage[toml]>=7.9.1",
  "pytest-cov>=6.2.1"
]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = [
  "S101", # assert
]
lint.select = [
  "B", # flake8-bugbear
  "C", # flake8-comprehensions
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "S", # flake8-bandit
  "W", # pycodestyle warnings
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
